--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,25 @@
 
+
+RewriteEngine On
+
+
+RewriteRule ^home test.php [NC,L]
+RewriteRule ^ikimina ikimina.php [NC,L]
+RewriteRule ^accounts accounts.php [NC,L]
+RewriteRule ^contAdmin contAdmin.php [NC,L]
+RewriteRule ^shora investment.php [NC,L]
+RewriteRule ^onceof onceof.php [NC,L]
+RewriteRule ^overview overview.php [NC,L]
+RewriteRule ^periodical periodical.php [NC,L]
+RewriteRule ^privacy privacy.php [NC,L]
+RewriteRule ^profile profile.php [NC,L]
+RewriteRule ^profile_performance profile_performance.php[NC,L]
+RewriteRule ^blank blank.php [NC,L]
+RewriteRule ^testall testall.php [NC,L]
+RewriteRule ^editgroup groupmod.php [NC,L]
+RewriteRule ^sitting sitting.php [NC,L]
+
+RewriteRule ^logout logout.php [NC,L]
+RewriteRule ^group([0-9]+) group.php?groupInfo=$1 [NC,L]
+RewriteRule ^editCont([0-9]+) editgroup.php?groupId=$1 [NC,L]
+RewriteRule ^cont([0-9]+) contribution.php?groupId=$1 [NC,L]
