--- a/.htaccess
+++ b/.htaccess
@@ -25,4 +25,5 @@ RewriteRule ^about about.php [NC,L]
 RewriteRule ^logout logout.php [NC,L]
 RewriteRule ^group([0-9]+) group.php?groupInfo=$1 [NC,L]
 RewriteRule ^editCont([0-9]+) editgroup.php?groupId=$1 [NC,L]
+RewriteRule ^editevent([0-9]+) editevent.php?eventId=$1 [NC,L]
 RewriteRule ^cont([0-9]+) contribution.php?groupId=$1 [NC,L]
